add robots.txt and analytics

--- a/_pages/order-site/index.html
+++ b/_pages/order-site/index.html
@@ -7,7 +7,7 @@ permalink: /order-site/
     <header class="header-order">
         <div class="desc-order">
             <h1>Заказать сайт</h1>
-            <p>Спасибо вам за проявленный интерес к сайту Jekyll Themes. Чтобы позволить нам более точно рассмотреть ваш проект и требования, мы просим Вас ответить на следующие вопросы. Мы стараемся отвечать на все предоставленные запросы в течение 1 до 2 рабочих дней.</p>
+            <p>Спасибо вам за проявленный интерес к сайту Jekyll Themes. Чтобы позволить нам более точно рассмотреть ваш проект и требования, мы просим вас ответить на следующие вопросы. Мы стараемся отвечать на все предоставленные запросы в течение 1 до 2 рабочих дней.</p>
         </div>
     </header>
     <form action="https://getsimpleform.com/messages?form_api_token=" method="post" class="order-form" id="form">
