--- a/_pages/order-site/index.html
+++ b/_pages/order-site/index.html
@@ -10,7 +10,7 @@ permalink: /order-site/
             <p>Спасибо вам за проявленный интерес к сайту Jekyll Themes. Чтобы позволить нам более точно рассмотреть ваш проект и требования, мы просим вас ответить на следующие вопросы. Мы стараемся отвечать на все предоставленные запросы в течение 1 до 2 рабочих дней.</p>
         </div>
     </header>
-    <form action="https://getsimpleform.com/messages?form_api_token=" method="post" class="order-form" id="form">
+    <form action="https://getsimpleform.com/messages?form_api_token=225d75603d4d1e6a8be2acfccea56931" method="post" class="order-form" id="form">
         <input type='hidden' name='redirect_to' value='{{site.baseurl}}/order-site/thanks/' />
         <div class="form-item">
             <label for="name"></label>
