--- a/_pages/order-site/index.html
+++ b/_pages/order-site/index.html
@@ -11,7 +11,7 @@ permalink: /order-site/
         </div>
     </header>
     <form action="https://getsimpleform.com/messages?form_api_token=225d75603d4d1e6a8be2acfccea56931" method="post" class="order-form" id="form">
-        <input type='hidden' name='redirect_to' value='{{site.baseurl}}/order-site/thanks/' />
+        <input type='hidden' name='redirect_to' value='http://jekyllthemes.ru/order-site/thanks/' />
         <div class="form-item">
             <label for="name"></label>
             <input type="text" name="name" id="name" placeholder="Имя" required>
