--- a/_pages/order-site/thanks/index.html
+++ b/_pages/order-site/thanks/index.html
@@ -7,7 +7,7 @@ permalink: /order-site/thanks/
     <header class="header-order">
         <div class="desc-order">
             <h1>Спасибо</h1>
-            <p class="desc-thank">Спасибо за обращение к нам, мы ответим Вам как можно скорее!</p>
+            <p class="desc-thank">Спасибо за обращение к нам, мы ответим вам как можно скорее!</p>
         </div>
     </header>
 </div>
